--- a/app/src/main/res/layout/activity_main_table.xml
+++ b/app/src/main/res/layout/activity_main_table.xml
@@ -14,16 +14,11 @@
         android:layout_height="match_parent"
         android:gravity="center">
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/view_screen"
                 android:layout_span="4"
                 android:gravity="end|bottom"
-                android:layout_height="@dimen/button_size"
-                android:background="@color/button"
-                android:text=""
-                android:textColor="@color/text"
-                android:textSize="@dimen/button_text" />
-
+                android:text="" />
     </TableRow>
 
     <TableRow
@@ -31,41 +26,21 @@
         android:layout_height="match_parent"
         android:gravity="center">
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_7"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:backgroundTint="@color/button"
-            android:text="@string/_7"
-            android:textColor="@color/text"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_7"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_8"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:backgroundTint="@color/button"
-            android:text="@string/_8"
-            android:textColor="@color/text"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_8"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_9"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:backgroundTint="@color/button"
-            android:text="@string/_9"
-            android:textColor="@color/text"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_9"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_divide"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:backgroundTint="@color/button"
-            android:text="@string/_divide"
-            android:textColor="@color/text"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_divide"/>
     </TableRow>
 
     <TableRow
@@ -73,41 +48,21 @@
         android:layout_height="match_parent"
         android:gravity="center">
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_4"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:text="@string/_4"
-            android:textSize="@dimen/button_text"
-            android:textColor="@color/text"
-            android:backgroundTint="@color/button"/>
+            android:text="@string/_4"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_5"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:text="@string/_5"
-            android:textSize="@dimen/button_text"
-            android:textColor="@color/text"
-            android:backgroundTint="@color/button"/>
+            android:text="@string/_5"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_6"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:text="@string/_6"
-            android:textSize="@dimen/button_text"
-            android:textColor="@color/text"
-            android:backgroundTint="@color/button"/>
+            android:text="@string/_6"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_multiply"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:text="@string/_multiply"
-            android:textSize="@dimen/button_text"
-            android:textColor="@color/text"
-            android:backgroundTint="@color/button"/>
+            android:text="@string/_multiply"/>
     </TableRow>
 
     <TableRow
@@ -116,41 +71,21 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_1"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:text="@string/_1"
-            android:textSize="@dimen/button_text"
-            android:textColor="@color/text"
-            android:backgroundTint="@color/button"/>
+            android:text="@string/_1"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_2"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:text="@string/_2"
-            android:textSize="@dimen/button_text"
-            android:textColor="@color/text"
-            android:backgroundTint="@color/button"/>
+            android:text="@string/_2"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_3"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:text="@string/_3"
-            android:textSize="@dimen/button_text"
-            android:textColor="@color/text"
-            android:backgroundTint="@color/button"/>
+            android:text="@string/_3"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_subtract"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:text="@string/_subtract"
-            android:textSize="@dimen/button_text"
-            android:textColor="@color/text"
-            android:backgroundTint="@color/button"/>
+            android:text="@string/_subtract"/>
     </TableRow>
 
     <TableRow
@@ -158,41 +93,21 @@
         android:layout_height="match_parent"
         android:gravity="center">
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_0"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:text="@string/_0"
-            android:textSize="@dimen/button_text"
-            android:textColor="@color/text"
-            android:backgroundTint="@color/button"/>
+            android:text="@string/_0"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_point"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:text="@string/_point"
-            android:textSize="@dimen/button_text"
-            android:textColor="@color/text"
-            android:backgroundTint="@color/button"/>
+            android:text="@string/_point"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_equal"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:text="@string/_equal"
-            android:textSize="@dimen/button_text"
-            android:textColor="@color/text"
-            android:backgroundTint="@color/button"/>
+            android:text="@string/_equal"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_add"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:text="@string/_add"
-            android:textSize="@dimen/button_text"
-            android:textColor="@color/text"
-            android:backgroundTint="@color/button"/>
+            android:text="@string/_add"/>
     </TableRow>
 
     <TableRow
@@ -200,40 +115,20 @@
         android:layout_height="match_parent"
         android:gravity="center">
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_backspace"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:backgroundTint="@color/button"
-            android:text="@string/_backspace"
-            android:textColor="@color/text"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_backspace"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_restore"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:backgroundTint="@color/button"
-            android:text="@string/_restore"
-            android:textColor="@color/text"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_restore"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_memory"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:backgroundTint="@color/button"
-            android:text="@string/_memory"
-            android:textColor="@color/text"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_memory"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_clear"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:backgroundTint="@color/button"
-            android:text="@string/_clear"
-            android:textColor="@color/text"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_clear"/>
     </TableRow>
 </TableLayout>
