--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="button">#2E007D</color>
-    <color name="text">#FFB800</color>
+    <color name="colorPrimary">#FF2E007D</color>
+    <color name="colorPrimaryDark">#FF1E007D</color>
+    <color name="colorAccent">#FF3E007D</color>
+    <color name="textColor">#FFFFB800</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
