reworked listeners minor adjustments to logic

--- a/app/src/main/res/layout-land/activity_main_table.xml
+++ b/app/src/main/res/layout-land/activity_main_table.xml
@@ -17,6 +17,7 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/view_screen"
                 android:layout_span="7"
+                android:layout_height="50dp"
                 android:gravity="end|bottom"
                 android:text=""/>
     </TableRow>
