--- a/app/src/main/res/layout/activity_main_table.xml
+++ b/app/src/main/res/layout/activity_main_table.xml
@@ -14,11 +14,14 @@
         android:layout_height="match_parent"
         android:gravity="center">
 
-            <com.google.android.material.button.MaterialButton
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/view_screen"
                 android:layout_span="4"
+                android:background="@color/colorPrimary"
+                android:textColor="@color/textColor"
                 android:gravity="end|bottom"
-                android:text="" />
+                android:textColorHint="@color/textColor"
+                android:hint="@string/hint"/>
     </TableRow>
 
     <TableRow
