--- a/app/src/main/res/layout/activity_main_table.xml
+++ b/app/src/main/res/layout/activity_main_table.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TableLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_columnSpan="4"
     android:gravity="center"
     android:orientation="vertical"
@@ -31,18 +31,26 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_7"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_7"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_8"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_8"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_9"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_9"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_divide"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_divide"/>
     </TableRow>
 
@@ -53,18 +61,26 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_4"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_4"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_5"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_5"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_6"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_6"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_multiply"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_multiply"/>
     </TableRow>
 
@@ -76,18 +92,26 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_1"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_1"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_2"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_2"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_3"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_3"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_subtract"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_subtract"/>
     </TableRow>
 
@@ -98,18 +122,26 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_0"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_0"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_point"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_point"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_equal"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_equal"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_add"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_add"/>
     </TableRow>
 
@@ -120,18 +152,26 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_backspace"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_backspace"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_restore"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_restore"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_memory"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_memory"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_clear"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
             android:text="@string/_clear"/>
     </TableRow>
 </TableLayout>
